kqed_dev4/src/objects/Bios__c.object
<CustomObject>
    <description>Object utilized for listing the various ways in which a Contact is related to the Organization and/or personal highlights that are important for profiling a person.  This object will has multiple record types and field dependencies to represent the different types of records.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bios</relationshipLabel>
        <relationshipName>Bios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <label>Award</label>
        <picklist>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honorary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Award_del_del__c</fullName>
        <inlineHelpText>Award received for service performed</inlineHelpText>
        <label>Award</label>
        <picklist>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honorary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Banking_Location__c</fullName>
        <label>Banking Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banking_Value__c</fullName>
        <label>Banking Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BlackBaud_Ratings__c</fullName>
        <label>BlackBaud Ratings</label>
        <picklist>
            <picklistValues>
                <fullName>Analytic Bequest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytic Charitable Remainder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytic Gift Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytic Planned Giving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Board_Level__c</fullName>
        <label>Board Level</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Boat_Location__c</fullName>
        <label>Boat Location DELETE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boat_Value__c</fullName>
        <label>Boat Value DELETE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Location__c</fullName>
        <label>Car Location DELETE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Value__c</fullName>
        <label>Car Value DELETE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <picklist>
            <picklistValues>
                <fullName>321</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21CENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3TENORS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTAMIND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTASIAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTBLACK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTBLIND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTCATH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTCHILD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTDEAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTDIVER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTEDU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTELDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTENV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTGAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTHANDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTHEALT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTJEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTLATIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTLIFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTMENTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTPROCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTREL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTREPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTSPIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTURBAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTWOMEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMAZING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERMAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConcatenationAffiliation__c</fullName>
        <formula>LEFT(
IF( Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
,
LEN(IF(Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenationAffiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConcatenationAthletics__c</fullName>
        <formula>LEFT(
IF( ISPICKVAL(Sport__c, &apos;&apos;) ,&apos;&apos;, TEXT(Sport__c) + &apos;, &apos;) + 
IF( School__r.Name ==&apos;&apos;,&apos;&apos;, School__r.Name + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
,
LEN(
IF( ISPICKVAL(Sport__c, &apos;&apos;) ,&apos;&apos;, TEXT(Sport__c) + &apos;, &apos;) + 
IF( School__r.Name ==&apos;&apos;,&apos;&apos;, School__r.Name + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenationAthletics</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConcatenationAward__c</fullName>
        <formula>LEFT(
IF( ISPICKVAL(Award__c, &apos;&apos;) ,&apos;&apos;, TEXT(Award__c) + &apos;, &apos;) +
IF(School__r.Name ==&apos;&apos;,&apos;&apos;, School__r.Name + &apos;, &apos;) +
IF( Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) + 
IF( ISPICKVAL(Year__c, &apos;&apos;) ,&apos;&apos;, TEXT(Year__c) + &apos;, &apos;)
,
LEN(
IF( ISPICKVAL(Award__c, &apos;&apos;) ,&apos;&apos;, TEXT(Award__c) + &apos;, &apos;) +
IF(School__r.Name ==&apos;&apos;,&apos;&apos;, School__r.Name + &apos;, &apos;) +
IF( Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) + 
IF( ISPICKVAL(Year__c, &apos;&apos;) ,&apos;&apos;, TEXT(Year__c) + &apos;, &apos;)
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenationAward</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConcatenationBlackBaudRatings__c</fullName>
        <formula>LEFT(
IF( Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
,
LEN(IF(Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenationBlackBaudRatings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConcatenationCharitableGiving__c</fullName>
        <formula>LEFT(
IF( Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
,
LEN(IF(Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenationCharitableGiving</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConcatenationEducation__c</fullName>
        <formula>LEFT(
IF(School__r.Name ==&apos;&apos;,&apos;&apos;, School__r.Name + &apos;, &apos;)  +
IF( ISPICKVAL(Degree__c, &apos;&apos;) ,&apos;&apos;, TEXT(Degree__c) + &apos;, &apos;)  +
IF( Concentration__c  ==&apos;&apos;,&apos;&apos;, Concentration__c + &apos;, &apos;) +
IF( ISPICKVAL(Year__c, &apos;&apos;) ,&apos;&apos;, TEXT(Year__c) + &apos;, &apos;) 
, 
LEN(IF(School__r.Name ==&apos;&apos;,&apos;&apos;, School__r.Name + &apos;, &apos;)  +
IF( ISPICKVAL(Degree__c, &apos;&apos;) ,&apos;&apos;, TEXT(Degree__c) + &apos;, &apos;)  +
IF( Concentration__c  ==&apos;&apos;,&apos;&apos;, Concentration__c + &apos;, &apos;)  +
IF( ISPICKVAL(Year__c, &apos;&apos;) ,&apos;&apos;, TEXT(Year__c) + &apos;, &apos;) 
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenationEducation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConcatenationEmployment__c</fullName>
        <formula>LEFT(
IF( Account__r.Name  ==&apos;&apos;,&apos;&apos;, Account__r.Name  + &apos;, &apos;)  +
IF(  Title_Role__c  ==&apos;&apos;,&apos;&apos;, Title_Role__c  + &apos;, &apos;) +
IF(  Industry__r.Name   ==&apos;&apos;,&apos;&apos;, Industry__r.Name   + &apos;, &apos;) +
IF(  TEXT(Start_Date__c)   ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF(  TEXT(End_Date__c)   ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;) 
, 
LEN(IF(Account__r.Name   ==&apos;&apos;,&apos;&apos;, Account__r.Name   + &apos;, &apos;)  +
IF( Title_Role__c  ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;)  +
IF(  Industry__r.Name ==&apos;&apos;,&apos;&apos;, Industry__r.Name  + &apos;, &apos;) +
IF(  TEXT(Start_Date__c)   ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF(  TEXT(End_Date__c)   ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;) 
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenationEmployment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConcatenationFinancial__c</fullName>
        <formula>LEFT(
IF( Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
,
LEN(IF(Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenationFinancial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConcatenationInterest__c</fullName>
        <formula>LEFT(
IF( Interest_Detail_Text__c ==&apos;&apos;,&apos;&apos;,  Interest_Detail_Text__c + &apos;, &apos;) +
IF( Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
,
LEN(
IF( Interest_Detail_Text__c ==&apos;&apos;,&apos;&apos;,  Interest_Detail_Text__c + &apos;, &apos;) +
IF(Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenationInterest</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConcatenationMembership__c</fullName>
        <formula>LEFT(
IF( Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
,
LEN(IF(Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenationMembership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConcatenationRatingCloseness__c</fullName>
        <formula>LEFT(
IF( Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
,
LEN(IF(Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenationRatingCloseness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConcatenationTrustee__c</fullName>
        <formula>LEFT(
IF( Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
,
LEN(IF(Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenationTrustee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConcatenationVolunteering__c</fullName>
        <formula>LEFT(
IF( Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
,
LEN(IF(Account__r.Name ==&apos;&apos;,&apos;&apos;, Account__r.Name + &apos;, &apos;) +
IF( Title_Role__c ==&apos;&apos;,&apos;&apos;, Title_Role__c + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenationVolunteering</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concatenation_Season_Ticket_Holder__c</fullName>
        <formula>LEFT(
IF( ISPICKVAL(Sport__c, &apos;&apos;) ,&apos;&apos;, TEXT(Sport__c) + &apos;, &apos;) +
IF( School__r.Name ==&apos;&apos;,&apos;&apos;, School__r.Name + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
,
LEN(
IF( ISPICKVAL(Sport__c, &apos;&apos;) ,&apos;&apos;, TEXT(Sport__c) + &apos;, &apos;) +
IF( School__r.Name ==&apos;&apos;,&apos;&apos;, School__r.Name + &apos;, &apos;) +
IF( TEXT(Start_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;Start Date: [&apos; + TEXT(MONTH(Start_Date__c)) + &apos;/&apos; + TEXT(DAY(Start_Date__c)) + &apos;/&apos; + TEXT(YEAR(Start_Date__c)) + &apos;]&apos; + &apos;, &apos;) +
IF( TEXT(End_Date__c) ==&apos;&apos;,&apos;&apos;, &apos;End Date: [&apos; + TEXT(MONTH(End_Date__c)) + &apos;/&apos; + TEXT(DAY(End_Date__c)) + &apos;/&apos; + TEXT(YEAR(End_Date__c)) + &apos;]&apos; + &apos;, &apos;)
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concatenation Season Ticket Holder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concentration__c</fullName>
        <label>Concentration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Awarded__c</fullName>
        <label>Date Awarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Highest Degree</label>
        <picklist>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <picklist>
            <controllingField>Interest_Description_Type__c</controllingField>
            <picklistValues>
                <fullName>American Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black/African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catholic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Definition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jazz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over The Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podcasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pop/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satellite Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This Week in Northern California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinatown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fillmore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Way It Was</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Arts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <label>Disability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Education_Comments__c</fullName>
        <label>Education_Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Date Term Completes (or is expected to complete)</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <label>Events</label>
        <picklist>
            <picklistValues>
                <fullName>Arts &amp; Culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conferences, Workshops &amp; Seminars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports &amp; Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talks &amp; Lectures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek Societies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholarship Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Symposiums</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Foundation_Assets__c</fullName>
        <label>Foundation Assets</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundation_Name__c</fullName>
        <label>Foundation Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Amount__c</fullName>
        <label>Gift Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <referenceTo>Industry__c</referenceTo>
        <relationshipName>Bios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InterestValue__c</fullName>
        <formula>LEFT(
IF(INCLUDES(Interest__c,&apos;1&apos;),&apos;1, &apos;,&apos;&apos;) +
IF(INCLUDES(Interest__c,&apos;2&apos;),&apos;2, &apos;,&apos;&apos;) +
IF(INCLUDES(Interest__c,&apos;3&apos;),&apos;3, &apos;,&apos;&apos;)
,
LEN(
IF(INCLUDES(Interest__c,&apos;1&apos;),&apos;1, &apos;,&apos;&apos;) +
IF(INCLUDES(Interest__c,&apos;2&apos;),&apos;2, &apos;,&apos;&apos;) +
IF(INCLUDES(Interest__c,&apos;3&apos;),&apos;3, &apos;,&apos;&apos;)
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InterestValue</label>
        <type>Text</type>
    </fields>
</CustomObject>